# dynamixplore

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  benchmark_output.json  benchmark_results.txt  pyproject.toml  release-please-config.json
.github/workflows/: CI.yml  docs.yml  release-please.yml  tests.yml
benchmarks/: parse_results.py  systems.py  test_analysis_benchmark.py  test_simulation_benchmark.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api_reference/: index.rst
docs/source/user_guide/: index.rst
dynamixplore/: __init__.py  analysis.py  simulation.py  visualize.py
dynamixplore/rust_core/: Cargo.toml  build.rs
dynamixplore/rust_core/src/: entropy.rs  integrators.rs  lib.rs  lyapunov.rs  main.rs  stats.rs  unit_test.rs
examples/: 01_lorenz_attractor_exploration.ipynb  demo.py
tests/: conftest.py  test_analysis.py  test_simulation.py
