[package]
name = "dynamixplore_core" # Or whatever your package name is
version = "0.5.0"
edition = "2021"

[lib]
name = "dx_rust"        # The name of the python module
crate-type = ["cdylib"]

[[bin]]
name = "test_harness"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "0.21.0"
nalgebra = "0.32.3"
rayon = "1.7.0"
dashmap = "5.5.3"
ndarray = "0.15.6"
